--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -117,7 +117,7 @@
             <h2>Health</h2>
 			<label title="Movement Speed"><input type="number" name="attr_speed" value=30> Movement Speed</label>
             <label title="HP"><input type="number" name="attr_HP" value=20> / <input type="number" name="attr_HP_max" value=20> HP</label>
-            <input type="number" name="attr_HP-Bloodied" disabled value=10> Bloodied value <input type="number" name="attr_HP-surgeValue" value=5> Surge Value <br>
+            <input type="number" name="attr_HP-Bloodied" value=10> Bloodied value <input type="number" name="attr_HP-surgeValue" value=5> Surge Value <br>
 			<label title="Surges"><input type="number" name="attr_surges" value=6> / <input type="number" name="attr_surges_max" value=6> Surges</label>
 			<br>
         </div>
@@ -134,7 +134,7 @@
         </div>
     </div>
     <h2>Powers</h2>
-	<button type='roll' name="roll_Striker_Damage" value='&{template:damage} {{name=Striker Dice}} {{damage=[[@{strikerdice}]]}} {{dmgcrit=[[@{strikercrit}]]}}'> </button> <label title="Striker Dice"> <input type="text" name="attr_strikerdice" value="" class="sheet-diceInput"> Striker dice</label> 
+	<button type='roll' name="roll_Striker_Damage" value='&{template:damage} {{name=Striker Dice}} {{damage=[[@{strikerdice}]]}} {{dmgcrit=[[@{strikercrit}]]}}'> </button> <label title="Striker Dice" class="sheet-inlineLabel"> <input type="text" name="attr_strikerdice" value="" class="sheet-diceInput"> Striker dice</label> 
     <input type="hidden" value="1d4" name="attr_strikercrit">
 	<div class='sheet-3colrow'>
 		<!-- AtWills -->
@@ -155,7 +155,6 @@
 				<div>
 					Attack? <input type="checkbox" value=1 checked="true" name="attr_AtWill-IsAttack" class="sheet-arrow">
 					<div class="sheet-body">
-						<button type='roll' name="roll_AtWill-Attack" value='&{template:attack} {{name=@{AtWill-Name}}} {{RangeTargets=@{AtWill-RangeTargets}}}{{attack=[[1d20+@{AtWill-HitBonus}]]}} {{attackadv=[[1d20+@{AtWill-HitBonus}]]}} {{defense=@{AtWill-DefSelect}}}'> </button>
 						<span class='sheet-AttSelect'>
 							<select name="attr_AtWill-Ability">
 								<option value="strmod">Strength</option>
@@ -174,8 +173,8 @@
 								<option value="Ref">Reflex</option>
 								<option value="Will">Will</option>
 							</select>
-						</span>
-						<br> Damage roll: <button type='roll' name="roll_AtWill-Damage" value='&{template:damage} {{name=@{AtWill-Name}}} {{damage=[[@{AtWill-damagedice} + @{AtWill-flatdamage}]]}} {{dmgcrit=[[@{AtWill-critdice} + @{AtWill-critflat}]]}}'> </button>
+						</span> 
+						<br>
 						<select name="attr_AtWill-Accessory" class="sheet-AccesorySelect">
 								<option value="wep1"> Weapon 1 </option>
 								<option value="wep2"> Weapon 2 </option>
@@ -183,14 +182,16 @@
 								<option value="imp1"> Implement 1 </option>
 								<option value="imp2"> Implement 2 </option>
 						</select>
-						<label title="Misc. Bonus to hit"> Misc Bonus to Hit <input type="number" value=0 name="attr_AtWill-MiscAttackBonus"></label>
+						<input type="number" value=0 name="attr_AtWill-HitBonus">
+						<button type='roll' name="roll_AtWill-Attack" value='&{template:attack} {{name=@{AtWill-Name}}} {{RangeTargets=@{AtWill-RangeTargets}}}{{attack=[[1d20+@{AtWill-HitBonus}]]}} {{attackadv=[[1d20+@{AtWill-HitBonus}]]}} {{defense=@{AtWill-DefSelect}}}'> </button>
+						<br> Damage roll: <button type='roll' name="roll_AtWill-Damage" value='&{template:damage} {{name=@{AtWill-Name}}} {{damage=[[@{AtWill-damagedice} + @{AtWill-flatdamage}]]}} {{dmgcrit=[[@{AtWill-critdice} + @{AtWill-critflat}]]}}'> </button>
 						<label title="Damage Dice"> Damage Dice <input type="text" name="attr_AtWill-damagedice" class="sheet-diceInput" value="1d4"></label>
-						<label title="Flat Damage"> Misc Flat Damage <input type="number" name="attr_AtWill-miscdamage" value=0></label>
+						<label title="Damage Bonus">Damage bonus: <input type="number" value=0 name="attr_AtWill-flatdamage"> </label>
+						<label title="Misc. Bonus to hit"> Misc Bonus to Hit <input type="number" value=0 name="attr_AtWill-MiscAttackBonus"></label>
+						<label title="Other damage bonus"> Misc Flat Damage <input type="number" name="attr_AtWill-miscdamage" value=0></label>
 						<input type="hidden" value=0 name="attr_AtWill-HitBonus-accessory">
 						<input type="hidden" value="1d4" name="attr_AtWill-critdice">
 						<input type="hidden" value=0 name="attr_AtWill-abimod">
-						<input type="hidden" value=0 name="attr_AtWill-HitBonus">
-						<input type="hidden" value=0 name="attr_AtWill-flatdamage">
 						<input type="hidden" value=0 name="attr_AtWill-critflat">
 						<label title="Hit">Hit: <textarea name="attr_AtWill-Power-Hit"></textarea></label>
 						<label title="Miss">Miss: <textarea name="attr_AtWill-Power-Miss"></textarea></label>
@@ -224,7 +225,6 @@
 				<div>
 					Attack? <input type="checkbox" value=1 checked="true" name="attr_Encounter-IsAttack" class="sheet-arrow">
 					<div class="sheet-body">
-						<button type='roll' name="roll_Encounter-Attack" value='&{template:attack} {{name=@{Encounter-Name}}} {{RangeTargets=@{Encounter-RangeTargets}}}{{attack=[[1d20+@{Encounter-HitBonus}]]}} {{attackadv=[[1d20+@{Encounter-HitBonus}]]}} {{defense=@{Encounter-DefSelect}}}'> </button>
 						<span class='sheet-AttSelect'>
 							<select name="attr_Encounter-Ability">
 								<option value="strmod">Strength</option>
@@ -243,8 +243,8 @@
 								<option value="Ref">Reflex</option>
 								<option value="Will">Will</option>
 							</select>
-						</span>
-						<br> Damage roll: <button type='roll' name="roll_Encounter-Damage" value='&{template:damage} {{name=@{Encounter-Name}}} {{damage=[[@{Encounter-damagedice} + @{Encounter-flatdamage}]]}} {{dmgcrit=[[@{Encounter-critdice} + @{Encounter-critflat}]]}}'> </button>
+						</span> 
+						<br>
 						<select name="attr_Encounter-Accessory" class="sheet-AccesorySelect">
 								<option value="wep1"> Weapon 1 </option>
 								<option value="wep2"> Weapon 2 </option>
@@ -252,14 +252,16 @@
 								<option value="imp1"> Implement 1 </option>
 								<option value="imp2"> Implement 2 </option>
 						</select>
-						<label title="Misc. Bonus to hit"> Misc Bonus to Hit <input type="number" value=0 name="attr_Encounter-MiscAttackBonus"></label>
+						<input type="number" value=0 name="attr_Encounter-HitBonus">
+						<button type='roll' name="roll_Encounter-Attack" value='&{template:attack} {{name=@{Encounter-Name}}} {{RangeTargets=@{Encounter-RangeTargets}}}{{attack=[[1d20+@{Encounter-HitBonus}]]}} {{attackadv=[[1d20+@{Encounter-HitBonus}]]}} {{defense=@{Encounter-DefSelect}}}'> </button>
+						<br> Damage roll: <button type='roll' name="roll_Encounter-Damage" value='&{template:damage} {{name=@{Encounter-Name}}} {{damage=[[@{Encounter-damagedice} + @{Encounter-flatdamage}]]}} {{dmgcrit=[[@{Encounter-critdice} + @{Encounter-critflat}]]}}'> </button>
 						<label title="Damage Dice"> Damage Dice <input type="text" name="attr_Encounter-damagedice" class="sheet-diceInput" value="1d4"></label>
-						<label title="Flat Damage"> Misc Flat Damage <input type="number" name="attr_Encounter-miscdamage" value=0></label>
+						<label title="Damage Bonus">Damage bonus: <input type="number" value=0 name="attr_Encounter-flatdamage"> </label>
+						<label title="Misc. Bonus to hit"> Misc Bonus to Hit <input type="number" value=0 name="attr_Encounter-MiscAttackBonus"></label>
+						<label title="Other damage bonus"> Misc Flat Damage <input type="number" name="attr_Encounter-miscdamage" value=0></label>
 						<input type="hidden" value=0 name="attr_Encounter-HitBonus-accessory">
 						<input type="hidden" value="1d4" name="attr_Encounter-critdice">
 						<input type="hidden" value=0 name="attr_Encounter-abimod">
-						<input type="hidden" value=0 name="attr_Encounter-HitBonus">
-						<input type="hidden" value=0 name="attr_Encounter-flatdamage">
 						<input type="hidden" value=0 name="attr_Encounter-critflat">
 						<label title="Hit">Hit: <textarea name="attr_Encounter-Power-Hit"></textarea></label>
 						<label title="Miss">Miss: <textarea name="attr_Encounter-Power-Miss"></textarea></label>
@@ -286,7 +288,6 @@
 				<div>
 					Attack? <input type="checkbox" value=1 checked="true" name="attr_Daily-IsAttack" class="sheet-arrow">
 					<div class="sheet-body">
-						<button type='roll' name="roll_Daily-Attack" value='&{template:attack} {{name=@{Daily-Name}}} {{RangeTargets=@{Daily-RangeTargets}}}{{attack=[[1d20+@{Daily-HitBonus}]]}} {{attackadv=[[1d20+@{Daily-HitBonus}]]}} {{defense=@{Daily-DefSelect}}}'> </button>
 						<span class='sheet-AttSelect'>
 							<select name="attr_Daily-Ability">
 								<option value="strmod">Strength</option>
@@ -305,8 +306,8 @@
 								<option value="Ref">Reflex</option>
 								<option value="Will">Will</option>
 							</select>
-						</span>
-						<br> Damage roll: <button type='roll' name="roll_Daily-Damage" value='&{template:damage} {{name=@{Daily-Name}}} {{damage=[[@{Daily-damagedice} + @{Daily-flatdamage}]]}} {{dmgcrit=[[@{Daily-critdice} + @{Daily-critflat}]]}}'> </button>
+						</span> 
+						<br>
 						<select name="attr_Daily-Accessory" class="sheet-AccesorySelect">
 								<option value="wep1"> Weapon 1 </option>
 								<option value="wep2"> Weapon 2 </option>
@@ -314,14 +315,16 @@
 								<option value="imp1"> Implement 1 </option>
 								<option value="imp2"> Implement 2 </option>
 						</select>
-						<label title="Misc. Bonus to hit"> Misc Bonus to Hit <input type="number" value=0 name="attr_Daily-MiscAttackBonus"></label>
+						<input type="number" value=0 name="attr_Daily-HitBonus">
+						<button type='roll' name="roll_Daily-Attack" value='&{template:attack} {{name=@{Daily-Name}}} {{RangeTargets=@{Daily-RangeTargets}}}{{attack=[[1d20+@{Daily-HitBonus}]]}} {{attackadv=[[1d20+@{Daily-HitBonus}]]}} {{defense=@{Daily-DefSelect}}}'> </button>
+						<br> Damage roll: <button type='roll' name="roll_Daily-Damage" value='&{template:damage} {{name=@{Daily-Name}}} {{damage=[[@{Daily-damagedice} + @{Daily-flatdamage}]]}} {{dmgcrit=[[@{Daily-critdice} + @{Daily-critflat}]]}}'> </button>
 						<label title="Damage Dice"> Damage Dice <input type="text" name="attr_Daily-damagedice" class="sheet-diceInput" value="1d4"></label>
-						<label title="Flat Damage"> Misc Flat Damage <input type="number" name="attr_Daily-miscdamage" value=0></label>
+						<label title="Damage Bonus">Damage bonus: <input type="number" value=0 name="attr_Daily-flatdamage"> </label>
+						<label title="Misc. Bonus to hit"> Misc Bonus to Hit <input type="number" value=0 name="attr_Daily-MiscAttackBonus"></label>
+						<label title="Other damage bonus"> Misc Flat Damage <input type="number" name="attr_Daily-miscdamage" value=0></label>
 						<input type="hidden" value=0 name="attr_Daily-HitBonus-accessory">
 						<input type="hidden" value="1d4" name="attr_Daily-critdice">
 						<input type="hidden" value=0 name="attr_Daily-abimod">
-						<input type="hidden" value=0 name="attr_Daily-HitBonus">
-						<input type="hidden" value=0 name="attr_Daily-flatdamage">
 						<input type="hidden" value=0 name="attr_Daily-critflat">
 						<label title="Hit">Hit: <textarea name="attr_Daily-Power-Hit"></textarea></label>
 						<label title="Miss">Miss: <textarea name="attr_Daily-Power-Miss"></textarea></label>
@@ -542,6 +545,15 @@
         });
 	});
 	
+	on("change:hp_max", function() {
+		getAttrs(["HP_max"], function(values){
+			setAttrs({
+				"HP-Bloodied": Math.floor(values.HP_max/2),
+				"HP-surgeValue": Math.floor(values.HP_max/4)
+			});
+		});
+	});
+	
 	on("change:strength", function() {
 		getAttrs(["Strength"], function(values){
 			setAttrs({
@@ -695,10 +707,10 @@
 	});
 	
 	on("change:repeating_atwills:atwill-ability", function(eventInfo) {
-		var abimod = eventInfo.newValue;
-		getAttrs([abimod], function(values){
+		var modname = eventInfo.newValue;
+		getAttrs([modname], function(values){
 			setAttrs({
-				"repeating_AtWills_AtWill-abimod": parseInt(values.abimod)
+				"repeating_AtWills_AtWill-abimod": parseInt(values[modname])
 			});
 		});
 	});
@@ -775,10 +787,10 @@
 	});
 	
 	on("change:repeating_encounters:encounter-ability", function(eventInfo) {
-		var abimod = eventInfo.newValue;
-		getAttrs([abimod], function(values){
+		var modname = eventInfo.newValue;
+		getAttrs([modname], function(values){
 			setAttrs({
-				"repeating_Encounters_Encounter-abimod": parseInt(values.abimod)
+				"repeating_Encounters_Encounter-abimod": parseInt(values[modname])
 			});
 		});
 	});
@@ -818,7 +830,7 @@
 		});
 	});
 	
-	on("change:repeating_dailys:daily-accessory", function(eventinfo) {
+	on("change:repeating_dalies:daily-accessory", function(eventinfo) {
 		var accessory = eventinfo.newValue;
 		var attack = (accessory + "-Attack");
 		var damage = (accessory + "-Damage");
@@ -836,9 +848,9 @@
 					critdice = (critdice + ' + ' + (parseInt(damagedice.substring(0,1)) * Math.ceil(parseInt(values["level"])/5)) + damagedice.substring(1));
 				}	
 				setAttrs({
-					"repeating_Dailys_Daily-HitBonus-accessory": parseInt(values[attack]),
-					"repeating_Dailys_Daily-damagedice": damagedice,
-					"repeating_Dailys_Daily-critdice": critdice
+					"repeating_Dalies_Daily-HitBonus-accessory": parseInt(values[attack]),
+					"repeating_Dalies_Daily-damagedice": damagedice,
+					"repeating_Dalies_Daily-critdice": critdice
 				});
 			});
 		}
@@ -846,54 +858,54 @@
 			getAttrs([attack,damage,"quest"], function(values) {
 				var critdice = (values['quest'] + "d6");
 				setAttrs({
-					"repeating_Dailys_Daily-HitBonus-accessory": parseInt(values[attack]),
-					"repeating_Dailys_Daily-damagedice": values[damage],
-					"repeating_Dailys_Daily-critdice": values[critdice]
+					"repeating_Dalies_Daily-HitBonus-accessory": parseInt(values[attack]),
+					"repeating_Dalies_Daily-damagedice": values[damage],
+					"repeating_Dalies_Daily-critdice": values[critdice]
 				});
 			});
 		}
 	});
 	
-	on("change:repeating_dailys:daily-ability", function(eventInfo) {
-		var abimod = eventInfo.newValue;
-		getAttrs([abimod], function(values){
+	on("change:repeating_dailies:daily-ability", function(eventInfo) {
+		var modname = eventInfo.newValue;
+		getAttrs([modname], function(values){
 			setAttrs({
-				"repeating_Dailys_Daily-abimod": parseInt(values.abimod)
+				"repeating_Dailies_Daily-abimod": parseInt(values[modname])
 			});
 		});
 	});
 	
-	on("change:repeating_dailys:daily-miscattackbonus change:repeating_dailys:daily-abimod change:repeating_dailys:daily-hitbonus-accessory", function () {
-		getAttrs(["repeating_dailys_Daily-MiscAttackBonus", "repeating_dailys_Daily-abimod", "repeating_dailys_Daily-HitBonus-accessory", "level-half", "Quest"], function(values){
-			var finalattr = (parseInt(values["repeating_dailys_Daily-MiscAttackBonus"]) + parseInt(values["repeating_dailys_Daily-abimod"]) + parseInt(values["repeating_dailys_Daily-HitBonus-accessory"]) + parseInt(values["level-half"]) + parseInt(values["Quest"]));
+	on("change:repeating_dalies:daily-miscattackbonus change:repeating_dalies:daily-abimod change:repeating_dalies:daily-hitbonus-accessory", function () {
+		getAttrs(["repeating_dalies_Daily-MiscAttackBonus", "repeating_dalies_Daily-abimod", "repeating_dalies_Daily-HitBonus-accessory", "level-half", "Quest"], function(values){
+			var finalattr = (parseInt(values["repeating_dalies_Daily-MiscAttackBonus"]) + parseInt(values["repeating_dalies_Daily-abimod"]) + parseInt(values["repeating_dalies_Daily-HitBonus-accessory"]) + parseInt(values["level-half"]) + parseInt(values["Quest"]));
 			setAttrs({
-				"repeating_Dailys_Daily-HitBonus": finalattr
+				"repeating_Dalies_Daily-HitBonus": finalattr
 			});
 		});
 	});
 	
-	on("change:repeating_dailys:daily-miscdamage change:repeating_dailys:daily-abimod", function () {
-		getAttrs(["repeating_Dailys_Daily-miscdamage", "repeating_Dailys_Daily-abimod", "level-half", "Quest"], function (values){
-			var finalattr = (parseInt(values["repeating_Dailys_Daily-abimod"]) + parseInt(values["repeating_Dailys_Daily-abimod"]) + parseInt(values["level-half"]) + parseInt(values["Quest"]));
+	on("change:repeating_dalies:daily-miscdamage change:repeating_dalies:daily-abimod", function () {
+		getAttrs(["repeating_Dalies_Daily-miscdamage", "repeating_Dalies_Daily-abimod", "level-half", "Quest"], function (values){
+			var finalattr = (parseInt(values["repeating_Dalies_Daily-abimod"]) + parseInt(values["repeating_Dalies_Daily-abimod"]) + parseInt(values["level-half"]) + parseInt(values["Quest"]));
 			setAttrs({
-				"repeating_Dailys_Daily-flatdamage": finalattr
+				"repeating_Dalies_Daily-flatdamage": finalattr
 			});
 		});
 	});
 	
-	on("change:repeating_dailys:daily-damagedice", function () {
-		getAttrs(["repeating_Dailys_Daily-damagedice"], function (values){
-			var numdice = parseInt(values["repeating_Dailys_Daily-damagedice"]);
+	on("change:repeating_dalies:daily-damagedice", function () {
+		getAttrs(["repeating_Dalies_Daily-damagedice"], function (values){
+			var numdice = parseInt(values["repeating_Dalies_Daily-damagedice"]);
 			var size = 4;
 			if (numdice<10) {
-				size = parseInt(values["repeating_Dailys_Daily-damagedice"].substring(2));
+				size = parseInt(values["repeating_Dalies_Daily-damagedice"].substring(2));
 			}
 			else {
-				size = parseInt(values["repeating_Dailys_Daily-damagedice"].substring(3));
+				size = parseInt(values["repeating_Dalies_Daily-damagedice"].substring(3));
 			}
 			var finalattr = (numdice * size);
 			setAttrs({
-				"repeating_Dailys_Daily-critflat": finalattr
+				"repeating_Dalies_Daily-critflat": finalattr
 			});
 		});
 	});
